...
    android:orientation="vertical"
    tools:context=".Activity.TelaPrincipalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista de Vagas"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <ListView
...
